[package]
name = "esprit-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"], optional = true }
image = { version = "0.24.5", optional = true }
evunit = { version = "1.3", optional = true }

[[bin]]
name = "makefont"
required-features = ["image"]

[[bin]]
name = "xp-calc"
required-features = ["clap"]

[[bin]]
name = "unit-test"
required-features = ["evunit"]
